--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,7 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700;800;900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
 @import "tailwindcss";
+@import "flag-icons/css/flag-icons.min.css";
 @source "../index.html";
 @source "./**/*.{js,ts,jsx,tsx}";
 
